--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,8 @@ input:focus {
 .about-link {
   display: flex;
   justify-content: flex-end;
+  margin-right: 50px;
+  margin-bottom: 50px;
 }
 
 /* FIX: Remove position: absolute to keep about icon at the bottom of the
